--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "mobile-flashcards",
-    "description": "This project is really great.",
-    "slug": "mobile-flashcards",
+    "name": "FlashCards questions",
+    "description": "My first app with react native",
+    "slug": "flashcards",
     "privacy": "public",
     "sdkVersion": "31.0.0",
     "platforms": ["ios", "android"],
@@ -20,8 +20,12 @@
     "assetBundlePatterns": [
       "**/*"
     ],
+    "android": {
+      "package": "org.flashcard.exp"
+     },
     "ios": {
-      "supportsTablet": true
+      "bundleIdentifier": "org.flashcard.exp",
+      "supportsTablet": false
     }
   }
 }
