feat: implementando função para remover deck

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "FlashCards questions",
+    "name": "FlashCards Mobile",
     "description": "My first app with react native",
     "slug": "flashcards",
     "privacy": "public",
